cookbooks/ethereum/beacons/infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "beacon"
  namespace: "beacon"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: beacon-tls
      hosts:
        - eth.zeus.fyi
  rules:
    - host: eth.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zeus-consensus-client
                port:
                  number: 80
          - path: /
            pathType: Exact
            backend:
              service:
                name: zeus-exec-client
                port:
                  number: 80
